nick dosn't want to do the deed

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
   <div class="container-fluid">
     <div class="row no-gutter">
       <div class="col-lg-4 col-sm-6">
-        <a href="#" class="pricing-box">
+        <a href="#pricing" class="pricing-box">
           <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
           <div class="portfolio-box-caption">
             <div class="pricing-box-caption-content">
@@ -192,16 +192,16 @@
                 <!--<div class="col-xs-3"></div>-->
                 <div class="col-xs-6">
                   <ul class="list-unstyled">
-                    <li>1 mo. free hanjobs</li>
-                    <li>All cloths stay on</li>
-                    <li>Look but don't touch</li>
+                    <li>item</li>
+                    <li>item</li>
+                    <li>item</li>
                   </ul>
                 </div>
                 <div class="col-xs-6">
                   <ul class="list-unstyled">
-                    <li>1 mo. free hanjobs</li>
-                    <li>All cloths stay on</li>
-                    <li>Look but don't touch</li>
+                    <li>item</li>
+                    <li>item</li>
+                    <li>item</li>
                   </ul>
                 </div>
                 <!--<div> class="col-xs-3"></div>-->
@@ -211,7 +211,7 @@
         </a>
       </div>
       <div class="col-lg-4 col-sm-6">
-        <a href="#" class="pricing-box">
+        <a href="#pricing" class="pricing-box">
           <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
           <div class="portfolio-box-caption">
             <div class="pricing-box-caption-content">
@@ -226,7 +226,7 @@
         </a>
       </div>
       <div class="col-lg-4 col-sm-6">
-        <a href="#" class="pricing-box">
+        <a href="#pricing" class="pricing-box">
           <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
           <div class="portfolio-box-caption">
             <div class="pricing-box-caption-content">
