some changes to colors and wording

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
   <img class="header-content">
   <img class="header-content-inner /">
   <div class="col-xs-12 spacer"></div>
-  <img src="img/logo.png" width="400" height="437" />
+  <img src="img/logo.png" width="300" height="328" />
   <div class="col-xs-12 spacer"></div>
-  <h2 class="section-heading">North Phoenix's undisputed leader in quality, service, and reliability.</h2>
+  <h2 class="section-heading">Phoenix's undisputed leader in quality, service, and reliability.</h2>
   <a href="#services" class="btn btn-primary btn-xl page-scroll">Our Services</a>
 </header>
 
