--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand page-scroll" href="#contact">Call for a free quote!</a>
+      <a class="navbar-brand page-scroll" href="#contact">Call or Text for a free quote!</a>
 
     </div>
 
