--- a/index.html
+++ b/index.html
@@ -205,22 +205,22 @@
                                 Chemicals Only
                             </div>
                             <div class="project-name">
-                                Starting at $55/mo.
+                                Starting at $55/mo.*
                             </div><br />
                             <div class="row pricing-details">
                                 <!--<div class="col-xs-3"></div>-->
                                 <div class="col-xs-6">
                                     <ul class="list-unstyled">
                                         <li>Weekly Service</li>
-                                        <li>item</li>
-                                        <li>item</li>
+                                        <li>Water Testing</li>
+                                        <li>Balance Water Chemistry</li>
                                     </ul>
                                 </div>
                                 <div class="col-xs-6">
                                     <ul class="list-unstyled">
-                                        <li>item</li>
-                                        <li>item</li>
-                                        <li>item</li>
+                                        <li>Empty Baskets</li>
+                                        <li>Inspect Pool & Equipment</li>
+                                        <li>Backwash (as needed)</li>
                                     </ul>
                                 </div>
                                 <!--<div> class="col-xs-3"></div>-->
@@ -238,7 +238,7 @@
                                 Basic Service
                             </div>
                             <div class="project-name">
-                                Starting at $75.
+                                Starting at $75/mo.*
                             </div>
                         </div>
                     </div>
@@ -253,7 +253,7 @@
                                 Full Service
                             </div>
                             <div class="project-name">
-                                Starting at $95/mo.
+                                Starting at $95/mo.*
                             </div>
                         </div>
                     </div>
@@ -261,6 +261,7 @@
             </div>
         </div>
     </div>
+    <div class="text-center disclamer"><p>*Prices vary depending on pool size, surrounding landscape, water and equipment condition. All pools must have properly functioning in-floor cleaning system or automatic pool cleaner.</p></div>
 </section>
 
 <section id="contact">
@@ -269,7 +270,7 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Let's Get In Touch!</h2>
                 <hr class="primary">
-                <p>Contact us for a no pressure quote and assessment. Even if you are happy with your pool service our experienced pool technicians are happy to review your water conditions and inspect your pool equipment before they become costly repairs.</p>
+                <p>Contact us for a no pressure quote and assessment. Whether you already have a pool service provider or are are looking for one. Our experienced pool technicians are happy to review your water's condition and inspect your pool equipment to ensure you are getting the most for your money.</p>
             </div>
             <div class="col-lg-4 col-lg-offset-2 text-center">
                 <i class="fa fa-phone fa-3x wow bounceIn"></i>
