--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                                 Chemicals Only
                             </div>
                             <div class="project-name">
-                                Starting at $55/mo.* pool
+                                Starting at $55/mo.* 
                             </div><br />
                             <div class="row pricing-details">
                                 <!--<div class="col-xs-3"></div>-->
