--- a/index.html
+++ b/index.html
@@ -170,29 +170,6 @@
     <div class="spacer"></div>
 </section>
 
-
-
-
-
-
-<!--<section class="no-padding" id="pricing">
-  <section id="services" class="bg-primary">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4 pricing-box text-center">
-          <h3>Plan 1</h3>
-        </div>
-        <div class="col-lg-4 pricing-box text-center">
-          <h3>Plan 1</h3>
-        </div>
-        <div class="col-lg-4 pricing-box text-center">
-          <h3>Plan 1</h3>
-        </div>
-      </div>
-    </div>
-  </section>-->
-
-
 <section class="no-padding" id="pricing">
     <div class="container-fluid">
         <div class="row no-gutter">
@@ -208,7 +185,6 @@
                                 Starting at $55/mo.* 
                             </div><br />
                             <div class="row pricing-details">
-                                <!--<div class="col-xs-3"></div>-->
                                 <div class="col-xs-6">
                                     <ul class="list-unstyled">
                                         <li>Weekly Service</li>
@@ -223,7 +199,6 @@
                                         <li>Backwash (as needed)</li>
                                     </ul>
                                 </div>
-                                <!--<div> class="col-xs-3"></div>-->
                             </div>
                         </div>
                     </div>
@@ -239,6 +214,22 @@
                             </div>
                             <div class="project-name">
                                 Starting at $75/mo.*
+                            </div><br />
+                            <div class="row pricing-details">
+                                <div class="col-xs-6">
+                                    <ul class="list-unstyled">
+                                        <li>Weekly Service</li>
+                                        <li>Water Testing</li>
+                                        <li>Balance Water Chemistry</li>
+                                    </ul>
+                                </div>
+                                <div class="col-xs-6">
+                                    <ul class="list-unstyled">
+                                        <li>Empty Baskets</li>
+                                        <li>Inspect Pool & Equipment</li>
+                                        <li>Backwash (as needed)</li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -254,6 +245,22 @@
                             </div>
                             <div class="project-name">
                                 Starting at $95/mo.*
+                            </div><br />
+                            <div class="row pricing-details">
+                                <div class="col-xs-6">
+                                    <ul class="list-unstyled">
+                                        <li>Weekly Service</li>
+                                        <li>Water Testing</li>
+                                        <li>Balance Water Chemistry</li>
+                                    </ul>
+                                </div>
+                                <div class="col-xs-6">
+                                    <ul class="list-unstyled">
+                                        <li>Empty Baskets</li>
+                                        <li>Inspect Pool & Equipment</li>
+                                        <li>Backwash (as needed)</li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -284,7 +291,16 @@
     </div>
 </section>
 
+<!-- GA -->
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+    ga('create', 'UA-67620515-1', 'auto');
+    ga('send', 'pageview');
+</script>
 
 <!-- jQuery -->
 <script src="js/jquery.js"></script>
