disclamer padding and pricing detail text

--- a/index.html
+++ b/index.html
@@ -214,8 +214,10 @@
                             </div>
                             <div class="project-name">
                                 Starting at $75/mo.*
-                            </div><br />
+                            </div>
+                            <br />
                             <div class="row pricing-details">
+                                <div class="project-category text-faded">Basic service includes chemicals only plus:</div><br />
                                 <div class="col-xs-6">
                                     <ul class="list-unstyled">
                                         <li>Weekly Service</li>
@@ -247,6 +249,7 @@
                                 Starting at $95/mo.*
                             </div><br />
                             <div class="row pricing-details">
+                                <div class="project-category text-faded">Full service includes basic service plus:</div><br />
                                 <div class="col-xs-6">
                                     <ul class="list-unstyled">
                                         <li>Weekly Service</li>
