--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Let's Get In Touch!</h2>
                 <hr class="primary">
-                <p>Contact us for a no pressure quote and assessment. Whether you already have a pool service provider or are are looking for one. Our experienced pool technicians are happy to review your water's condition and inspect your pool equipment to ensure you are getting the most for your money.</p>
+                <p>Contact us for a no pressure quote and assessment. Whether you already have a pool service provider or are looking for a new one. Our experienced pool technicians are happy to review your water's condition and inspect your pool equipment to ensure you are getting the most for your money.</p>
             </div>
             <div class="col-lg-4 col-lg-offset-2 text-center">
                 <i class="fa fa-phone fa-3x wow bounceIn"></i>
