--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Family owned and operated, focused on quality over quantity.</h2>
+                <h2 class="section-heading">Locally owned and operated, focused on quality over quantity.</h2>
                 <hr class="light">
                 <p class="text-faded">Tier 1 Poolcare is proud to cater specifically to the North Valley. Keeping our pool routes in close proximity to one another is essential for us to provide the level of quality and service that we have become known for.</p>
             </div>
