--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-graduation-cap wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Experienced Technicians</h3>
-                    <p class="text-muted">CPO certified technicians to ensure your pool water is safe and properly maintained. We utilize professional drop-test kits to ensure your pool levels are optimal after every visit. </p>
+                    <p class="text-muted">CPO certified technicians to ensure your pool water is safe and properly maintained. We utilize professional drop-test kits to ensure your water chemistry is at optimal levels after every visit. </p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
