--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Reliable Service</h3>
-                    <p class="text-muted">No one appreciates an unexpected stranger. We have set routes and dedicated technicians to ensure consistency for our customers. We pride ourselves on being personable an getting to know our customers.</p>
+                    <p class="text-muted">No one appreciates an unexpected stranger. We have set routes and dedicated technicians to ensure consistency for our customers. We pride ourselves on our work, being personable and getting to know our customers.</p>
                 </div>
             </div>
         </div>
