Changes to Full service

--- a/index.html
+++ b/index.html
@@ -251,16 +251,16 @@
                                 <div class="project-category text-faded">Full service includes basic service plus:</div><br />
                                 <div class="col-xs-6">
                                     <ul class="list-unstyled">
-                                        <li>Weekly Service</li>
-                                        <li>Water Testing</li>
-                                        <li>Balance Water Chemistry</li>
+                                        <li>Brush Tile line, Steps and Surfaces</li>
+                                        <li>Skim All Debris</li>
+                                        
                                     </ul>
                                 </div>
                                 <div class="col-xs-6">
                                     <ul class="list-unstyled">
-                                        <li>Empty Baskets</li>
-                                        <li>Inspect Pool & Equipment</li>
-                                        <li>Backwash (as needed)</li>
+                                        <li>Hand Vac (as needed)</li>
+                                        <li>Maintain Lubrication of O-rings and Valves</li>
+                                        
                                     </ul>
                                 </div>
                             </div>
