gulp and imgmin support

--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
     <link rel="stylesheet" href="css/creative.css" type="text/css">
 
     <!-- Custom Icons-->
-    <link rel="apple-touch-icon" sizes="57x57" href="img/icons/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="img/icons/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="img/icons/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="img/icons/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="img/icons/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="img/icons/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="img/icons/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="img/icons/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="img/icons/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="img/icons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
-    <link rel="manifest" href="img/icons/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="dest/icons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="dest/icons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="dest/icons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="dest/icons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="dest/icons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="dest/icons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="dest/icons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="dest/icons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="dest/icons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="dest/icons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="dest/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="dest/icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="dest/icons/favicon-16x16.png">
+    <link rel="manifest" href="dest/icons/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="img/icons/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="dest/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -96,7 +96,7 @@
     <img class="header-content">
     <img class="header-content-inner /">
     <div class="col-xs-12 spacer"></div>
-    <img src="img/logo.png" width="300" height="328" />
+    <img src="dest/logo.png" width="300" height="328" />
     <div class="col-xs-12 spacer"></div>
     <h2 class="section-heading">The North Valley's leader in quality, service, and reliability.</h2>
     <a href="#services" class="btn btn-primary btn-xl page-scroll">Our Services</a>
@@ -175,7 +175,7 @@
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
                 <a href="#pricing" class="pricing-box">
-                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                    <img src="dest/portfolio/1.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="pricing-box-caption-content">
                             <div class="project-category text-faded">
@@ -206,7 +206,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#pricing" class="pricing-box">
-                    <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
+                    <img src="dest/portfolio/2.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="pricing-box-caption-content">
                             <div class="project-category text-faded">
@@ -238,7 +238,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#pricing" class="pricing-box">
-                    <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
+                    <img src="dest/portfolio/3.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="pricing-box-caption-content">
                             <div class="project-category text-faded">
