--- a/index.html
+++ b/index.html
@@ -11,37 +11,30 @@
 
     <title>Tier 1 Poolcare</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+    <!-- CSS -->
+    <link rel="stylesheet" href="dist/css/bundle.css" type="text/css">
 
     <!-- Custom Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
-
-    <!-- Plugin CSS -->
-    <link rel="stylesheet" href="css/animate.min.css" type="text/css">
-
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/creative.css" type="text/css">
 
     <!-- Custom Icons-->
-    <link rel="apple-touch-icon" sizes="57x57" href="dest/icons/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="dest/icons/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="dest/icons/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="dest/icons/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="dest/icons/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="dest/icons/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="dest/icons/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="dest/icons/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="dest/icons/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="dest/icons/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="dest/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="dest/icons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="dest/icons/favicon-16x16.png">
-    <link rel="manifest" href="dest/icons/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="dist/icons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="dist/icons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="dist/icons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="dist/icons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="dist/icons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="dist/icons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="dist/icons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="dist/icons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="dist/icons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="dist/icons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="dist/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="dist/icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="dist/icons/favicon-16x16.png">
+    <link rel="manifest" href="dist/icons/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="dest/icons/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="dist/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -96,7 +89,7 @@
     <img class="header-content">
     <img class="header-content-inner /">
     <div class="col-xs-12 spacer"></div>
-    <img src="dest/logo.png" width="300" height="328" />
+    <img src="dist/logo.png" width="300" height="328" />
     <div class="col-xs-12 spacer"></div>
     <h2 class="section-heading">The North Valley's leader in quality, service, and reliability.</h2>
     <a href="#services" class="btn btn-primary btn-xl page-scroll">Our Services</a>
@@ -175,7 +168,7 @@
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
                 <a href="#pricing" class="pricing-box">
-                    <img src="dest/portfolio/1.jpg" class="img-responsive" alt="">
+                    <img src="dist/portfolio/1.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="pricing-box-caption-content">
                             <div class="project-category text-faded">
@@ -206,7 +199,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#pricing" class="pricing-box">
-                    <img src="dest/portfolio/2.jpg" class="img-responsive" alt="">
+                    <img src="dist/portfolio/2.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="pricing-box-caption-content">
                             <div class="project-category text-faded">
@@ -238,7 +231,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#pricing" class="pricing-box">
-                    <img src="dest/portfolio/3.jpg" class="img-responsive" alt="">
+                    <img src="dist/portfolio/3.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="pricing-box-caption-content">
                             <div class="project-category text-faded">
@@ -300,7 +293,7 @@
 <script src="js/jquery.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
+<script src="js/bootstap.min.js"></script>
 
 <!-- Plugin JavaScript -->
 <script src="js/jquery.easing.min.js"></script>
