broken img link

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
                 <a href="#pricing" class="pricing-box">
-                    <img src="dist/portfolio/1.jpg" class="img-responsive" alt="">
+                    <img src="dist/images/portfilio/1.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="pricing-box-caption-content">
                             <div class="project-category text-faded">
@@ -199,7 +199,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#pricing" class="pricing-box">
-                    <img src="dist/portfolio/2.jpg" class="img-responsive" alt="">
+                    <img src="dist/images/portfilio/2.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="pricing-box-caption-content">
                             <div class="project-category text-faded">
@@ -231,7 +231,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#pricing" class="pricing-box">
-                    <img src="dist/portfolio/3.jpg" class="img-responsive" alt="">
+                    <img src="dist/images/portfilio/3.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="pricing-box-caption-content">
                             <div class="project-category text-faded">
