--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
     <!-- Custom Icons-->
-    <link rel="apple-touch-icon" sizes="57x57" href="dist/icons/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="dist/icons/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="dist/icons/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="dist/icons/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="dist/icons/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="dist/icons/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="dist/icons/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="dist/icons/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="dist/icons/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="dist/icons/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="dist/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="dist/icons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="dist/icons/favicon-16x16.png">
-    <link rel="manifest" href="dist/icons/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="dist/images/icons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="dist/images/icons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="dist/images/icons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="dist/images/icons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="dist/images/icons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="dist/images/icons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="dist/images/icons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="dist/images/icons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="dist/images/icons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="dist/images/icons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="dist/images/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="dist/images/icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="dist/images/icons/favicon-16x16.png">
+    <link rel="manifest" href="dist/images/icons/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="dist/icons/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="dist/images/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -89,7 +89,7 @@
     <img class="header-content">
     <img class="header-content-inner /">
     <div class="col-xs-12 spacer"></div>
-    <img src="dist/logo.png" width="300" height="328" />
+    <img src="dist/images/logo.png" width="300" height="328" />
     <div class="col-xs-12 spacer"></div>
     <h2 class="section-heading">The North Valley's leader in quality, service, and reliability.</h2>
     <a href="#services" class="btn btn-primary btn-xl page-scroll">Our Services</a>
@@ -168,7 +168,7 @@
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
                 <a href="#pricing" class="pricing-box">
-                    <img src="dist/images/portfilio/1.jpg" class="img-responsive" alt="">
+                    <img src="dist/images/portfolio/1.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="pricing-box-caption-content">
                             <div class="project-category text-faded">
@@ -199,7 +199,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#pricing" class="pricing-box">
-                    <img src="dist/images/portfilio/2.jpg" class="img-responsive" alt="">
+                    <img src="dist/images/portfolio/2.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="pricing-box-caption-content">
                             <div class="project-category text-faded">
@@ -231,7 +231,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#pricing" class="pricing-box">
-                    <img src="dist/images/portfilio/3.jpg" class="img-responsive" alt="">
+                    <img src="dist/images/portfolio/3.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="pricing-box-caption-content">
                             <div class="project-category text-faded">
